--- a/assets/style.css
+++ b/assets/style.css
@@ -113,7 +113,7 @@
 }
 
 .hero-bg-img {
-    background-image: url(media/hero-section-bg-img-1836x630.png);
+    background-image: url(./media/hero-section-bg-img-1836x630.png);
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
